# sea_otter

./: .gitignore  hello.py  pyproject.toml
data/: AR25-087A STIX JSON.json  MAR-10443863.r1.v1.CLEAR_stix2.json  MAR-10448362.c1.v2.CLEAR_stix2.json.json  README.md
src/sea_otter/nlp/: pdf_parsing.py
src/sea_otter/scraping/: crawler.py
src/sea_otter/scrapping/: scrap.py
