[project]
name = "sea-otter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "jupyter>=1.1.1",
    "requests>=2.32.3",
    "sentencepiece>=0.2.0",
    "stix>=1.2.0.11",
    "transformers[torch]>=4.51.0",
]
